@@ -1,3 +1,7 @@
+2009-02-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_simpletags.c: compute "count" for ascii tag values.
+
 2008-12-29  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: Optimizations to avoid opening CSV files for
